packages/parser/test/parser/E0154.txt
type Alias str
===== err =====
anonymous:1:11: ParseError: E0154 - Expected equals sign after type alias declaration name
1 | type Alias str
  |           ^
